--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						</ul>
 					</li>
 					<li class="menu">
-						<a href="blog.html">Blog</a>
+						<a href="blog.html">Readmovwee</a>
 						<ul class="secondary">
 							<li>
 								<a href="singlepost.html">Single post</a>
